--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Category Page</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <!-- Main Category Sidebar -->
     <div class="sidebar main-sidebar">
         <h2>Main Categories</h2>
@@ -175,6 +175,14 @@
             <input type="text" id="search-input" placeholder="Search categories...">
              <span id="clear-search" class="clear-search">&times;</span>
         </div>
+
+        <div id="carousel-container" class="carousel-container">
+            <iframe src="https://suhedges.github.io/carousel1/index.html" 
+                    width="100%" height="600px" 
+                    frameborder="0" scrolling="no" 
+                    style="border: none;"></iframe>
+        </div>
+
         <div id="final-category-container" class="final-category-container"></div>
         <div id="initial-message" class="initial-message">
             <p>Select a Category</p>
