--- a/index.html
+++ b/index.html
@@ -161,8 +161,9 @@
 
     <!-- Penultimate Category Sidebar (initially hidden) -->
     <div class="sidebar penultimate-sidebar">
-        <button id="back-button">← Back</button>
-        <h2>Subcategories</h2>
+        <button id="back-button">Go Back</button>
+        <h2>SUBCATEGORIES</h2>
+        <button id="all-subcategories-button" class="all-subcategories-button">All Subcategories</button>
         <div id="penultimate-links"></div>
     </div>
 
